# snap

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: build.yml  checks.yml  commit-lint.yml  lint-workflows.yml  release-please.yml  release.yml
openspec/changes/modernise-project/: design.md  proposal.md  tasks.md
openspec/changes/modernise-project/specs/ci-pipeline/: spec.md
openspec/changes/modernise-project/specs/dependency-modernisation/: spec.md
openspec/changes/modernise-project/specs/pre-commit-hooks/: spec.md
openspec/changes/modernise-project/specs/release-pipeline/: spec.md
openspec/changes/whiteboard-features/: design.md  proposal.md  tasks.md
openspec/changes/whiteboard-features/specs/clipboard/: spec.md
openspec/changes/whiteboard-features/specs/drawing-colours/: spec.md
openspec/changes/whiteboard-features/specs/eraser/: spec.md
openspec/changes/whiteboard-features/specs/export-png/: spec.md
openspec/changes/whiteboard-features/specs/line-thickness/: spec.md
openspec/changes/whiteboard-features/specs/screenshot-capture/: spec.md
openspec/changes/whiteboard-features/specs/shape-selection/: spec.md
openspec/changes/whiteboard-features/specs/shape-tools/: spec.md
openspec/changes/whiteboard-features/specs/text-annotations/: spec.md
openspec/changes/whiteboard-features/specs/theme-switching/: spec.md
openspec/changes/whiteboard-features/specs/undo-redo/: spec.md
openspec/research/: architecture-analysis.md
src/: canvas.rs  center_widget.rs  clipboard.rs  eraser.rs  export.rs  footer.rs  header.rs  history.rs  main.rs  main_using_iced.rs  palette.rs  screenshot.rs  selection.rs  state.rs
