[package]
name = "snap"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "dep:serde_json", "egui/serde"]

[dependencies]
dark-light = "2.0.0"
eframe = "0.33.3"
egui = "0.33.3"
global-hotkey = "0.7.0"
image = "0.25"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
xcap = "0.8"
