[package]
name = "snap"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/webbertakken/snap"

[features]
serde = ["dep:serde", "dep:serde_json", "egui/serde"]

[dependencies]
dark-light = "2.0.0"
eframe = "0.33.3"
egui = "0.33.3"
global-hotkey = "0.7.0"
image = "0.25"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
xcap = "0.8"

# cargo-dist build profile
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-dist configuration
[workspace.metadata.dist]
cargo-dist-version = "0.30.4"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
# PR checks run plan-only to catch issues early
pr-run-mode = "plan"
# release-please creates the GitHub Release; cargo-dist only uploads artifacts
create-release = false

# Linux system dependencies for egui/eframe + xcap
[workspace.metadata.dist.dependencies.apt]
libxcb-render0-dev = "*"
libxcb-shape0-dev = "*"
libxcb-xfixes0-dev = "*"
libxkbcommon-dev = "*"
libssl-dev = "*"
libgtk-3-dev = "*"
"libpipewire-0.3-dev" = "*"
libclang-dev = "*"
libxcb1-dev = "*"
libxrandr-dev = "*"
libdbus-1-dev = "*"
libwayland-dev = "*"
libegl-dev = "*"

# Custom runners for specific targets
[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-24.04"
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
x86_64-unknown-linux-gnu = "ubuntu-24.04"
x86_64-apple-darwin = "macos-latest"
